WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144032
WKWebsiteDataStore doesn't track and remove IndexedDB databases
https://bugs.webkit.org/show_bug.cgi?id=144032
Summary
WKWebsiteDataStore doesn't track and remove IndexedDB databases
Anders Carlsson
Reported
2015-04-21 19:33:38 PDT
WKWebsiteDataStore doesn't track and remove IndexedDB databases
Attachments
Patch
(24.86 KB, patch)
2015-04-21 19:36 PDT
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(24.89 KB, patch)
2015-04-21 19:37 PDT
,
Anders Carlsson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2015-04-21 19:36:22 PDT
Created
attachment 251294
[details]
Patch
Anders Carlsson
Comment 2
2015-04-21 19:37:04 PDT
Created
attachment 251295
[details]
Patch
WebKit Commit Bot
Comment 3
2015-04-21 19:39:01 PDT
Attachment 251295
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/Databases/DatabaseProcessProxy.cpp:88: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Databases/DatabaseProcessProxy.cpp:98: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Databases/DatabaseProcessProxy.cpp:106: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Databases/DatabaseProcessProxy.h:51: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Databases/DatabaseProcessProxy.h:52: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Databases/DatabaseProcessProxy.h:53: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Databases/DatabaseProcessProxy.h:88: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Databases/DatabaseProcessProxy.h:89: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Databases/DatabaseProcessProxy.h:90: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/DatabaseProcess/DatabaseProcess.cpp:205: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/DatabaseProcess/DatabaseProcess.cpp:222: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/DatabaseProcess/DatabaseProcess.cpp:250: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/DatabaseProcess/DatabaseProcess.cpp:251: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] ERROR: Source/WebKit2/DatabaseProcess/DatabaseProcess.cpp:262: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/DatabaseProcess/DatabaseProcess.cpp:282: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/DatabaseProcess/DatabaseProcess.cpp:294: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/DatabaseProcess/DatabaseProcess.cpp:303: Missing space around : in range-based for statement [whitespace/colon] [4] Total errors found: 17 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 4
2015-04-21 19:39:48 PDT
Comment on
attachment 251294
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=251294&action=review
> Source/WebKit2/UIProcess/API/Cocoa/WKWebsiteDataRecord.mm:66 > + [array addObject:@"Indexed DB"];
is it really ever "Indexed DB"? I see "Indexed Database" and "IndexedDB", but never "Indexed DB".
Anders Carlsson
Comment 5
2015-04-21 19:48:02 PDT
Committed
r183093
: <
http://trac.webkit.org/changeset/183093
>
Sihui Liu
Comment 6
2021-08-11 14:30:22 PDT
***
Bug 144031
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug