Source/WebKit2/UIProcess/WebsiteData/WebsiteDataStore.cpp
@@ -319,6 +319,23 @@ void WebsiteDataStore::fetchData(WebsiteDataTypes dataTypes, std::function<void 
         });
     }
 
+#if ENABLE(DATABASE_PROCESS)
+    if (dataTypes & WebsiteDataTypeIndexedDBDatabases && !isNonPersistent()) {
+        HashSet<WebProcessPool*> processPools;
+        for (auto& process : processes())
+            processPools.add(&process->processPool());
+
+        for (auto& processPool : processPools) {
+            processPool->ensureDatabaseProcess();
+
+            callbackAggregator->addPendingCallback();
+            processPool->databaseProcess()->fetchWebsiteData(m_sessionID, dataTypes, [callbackAggregator](WebsiteData websiteData) {
+                callbackAggregator->removePendingCallback(WTF::move(websiteData));
+            });
+        }
+    }
+#endif
+
     callbackAggregator->callIfNeeded();
 }
 
@@ -475,6 +492,23 @@ void WebsiteDataStore::removeData(WebsiteDataTypes dataTypes, std::chrono::syste
         });
     }
 
+#if ENABLE(DATABASE_PROCESS)
+    if (dataTypes & WebsiteDataTypeIndexedDBDatabases && !isNonPersistent()) {
+        HashSet<WebProcessPool*> processPools;
+        for (auto& process : processes())
+            processPools.add(&process->processPool());
+
+        for (auto& processPool : processPools) {
+            processPool->ensureDatabaseProcess();
+
+            callbackAggregator->addPendingCallback();
+            processPool->databaseProcess()->deleteWebsiteData(m_sessionID, dataTypes, modifiedSince, [callbackAggregator]() {
+                callbackAggregator->removePendingCallback();
+            });
+        }
+    }
+#endif
+
     // There's a chance that we don't have any pending callbacks. If so, we want to dispatch the completion handler right away.
     callbackAggregator->callIfNeeded();
 }
@@ -630,6 +664,23 @@ void WebsiteDataStore::removeData(WebsiteDataTypes dataTypes, const Vector<Websi
             });
         });
     }
+
+#if ENABLE(DATABASE_PROCESS)
+    if (dataTypes & WebsiteDataTypeIndexedDBDatabases && !isNonPersistent()) {
+        HashSet<WebProcessPool*> processPools;
+        for (auto& process : processes())
+            processPools.add(&process->processPool());
+
+        for (auto& processPool : processPools) {
+            processPool->ensureDatabaseProcess();
+
+            callbackAggregator->addPendingCallback();
+            processPool->databaseProcess()->deleteWebsiteDataForOrigins(m_sessionID, dataTypes, origins, [callbackAggregator]() {
+                callbackAggregator->removePendingCallback();
+            });
+        }
+    }
+#endif
 
     // There's a chance that we don't have any pending callbacks. If so, we want to dispatch the completion handler right away.
     callbackAggregator->callIfNeeded();
